--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "16.3.1",
     "react-addons-update": "^15.6.2",
     "react-native": "0.55.4",
+    "react-native-mail-compose": "0.0.6",
     "react-navigation": "^2.0.1",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
